<resources>
    <string name="app_name">Clinique</string>
    <string name="welcomingText">Welcome to the Clinique!</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registerPrompt">Register!</string>
    <string name="loginButton">LogIn!</string>
    <string name="letsMakeAccount">Let\'s make you an account!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="cnp">CNP</string>
    <string name="address">Address</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="welcome">👋Welcome,</string>
    <string name="all_medics">All Medics</string>
    <string name="dr_name">Dr. Placeholder Placeholder</string>
    <string name="specialitate_placeholder">Specialitate</string>
    <string name="_4_5">⭐4.5</string>
    <string name="our_doctors">Our Doctors</string>
    <string name="loading">Loading...</string>
    <string name="profile">Profile</string>
    <string name="personal_info">Personal info:</string>
    <string name="name">NAME</string>
    <string name="programeaza_te">Programeaza-te!</string>
    <string name="filter">Filter:</string>
    <string name="cauta_medic">Cauta Medic</string>
    <string name="cauta_spec">Cauta Specialitate</string>
    <string name="alege">Alege</string>
    <string name="verifica_disponibilitate">Verifica disponibilitate</string>
    <string name="programare">Programare</string>
    <string name="data_dd_mm_yyyy">Data: dd/mm/yyyy</string>
    <string name="programeaza">Programeaza!</string>
    <string name="nume_medic_specialitate">Nume medic + Specialitate</string>
    <string name="appointments">Appointments</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="data">DATA</string>
    <string name="ora">ORA</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="hh_mm">HH:mm</string>
    <string name="about_clinique">About Us</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="investigations">Investigations</string>
    <string name="about_our_clinic">About our clinic</string>
    <string name="contact_info">Contact info</string>
    <string name="email_clinicaartemis_gmail_com">Email: clinicaartemis@gmail.com</string>
    <string name="telefon_0717528323">Telefon: 0717528323</string>
    <string name="locatie">Locatie:</string>
    <string name="edit_info">Edit personal info:</string>
    <string name="submit_changes">Submit changes</string>
    <string name="this_week_s_appointments">This week\'s appointments</string>
    <string name="investigations_title">Investigations</string>
    <string name="name_of_investigation">Name of investigation</string>
    <string name="price_placeholder">1000 Ron</string>
    <string name="add_investigation_to_cart">Add investiagion to cart</string>
    <string name="current_total">Current total:</string>
    <string name="check_out">check out</string>
    <string name="see_cart">See cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="checkout">CheckOut</string>
    <string name="motivul_vizitei">Motivul vizitei (Optional)</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="luckily_you_don_t_have_any_appointments">You don\'t have any appointments this week</string>
    <string name="orders">Orders</string>
    <string name="daily_news">Daily News</string>
    <string name="comanda">Comanda:</string>
    <string name="orderno_placeholder">#1001</string>
    <string name="date_placeholder">dd-MM-yyyy HH:mm</string>
    <string name="data_order">Data:</string>
    <string name="total_comanda">Total comanda:</string>
    <string name="genereaza_factura">Genereaza factura</string>
    <string name="more_info">More info</string>
    <string name="daily_news_health_tips">Daily News - Health Tips</string>
    <string name="news_title_placeholder">News title placeholder</string>
    <string name="see_more">See more</string>
    <string name="your_weight">Your weight:</string>
    <string name="weight_hint">68kg</string>
    <string name="your_height">Your height:</string>
    <string name="height_hint">177cm</string>
    <string name="your_gender">Your gender:</string>
    <string name="male_rb_text">Male</string>
    <string name="female_rb_text">Female</string>
    <string name="activity_level">Activity level:</string>
    <string name="obtain_body_analysis">Obtain body analysis!</string>
    <string name="disclaimer_your_body_analysis_is_calculated_based_on_a_fixed_forumla_and_it_doesn_t_necessarily_reflect_your_well_being">
        Disclaimer: Your body analysis is calculated based on a fixed forumla and it doesn\'t necessarily reflect your well being. Always discuss with your doctor before starting doing exercises or beginning a diet!
    </string>
    <string name="body_analysis">Body analysis</string>
    <string name="body_analysis_main">Body Analysis</string>
    <string name="bmr">BMR:</string>
    <string name="kcal_placeholder">2500kcal</string>
    <string name="based_on_activity_level">Based on activity level:</string>
    <string name="kcals_you_are_burning_by_just_living">Kcals burned naturally by the body</string>
    <string name="recommended">Recommended</string>
    <string name="based_on_your_activity_level">Based on your activity level</string>
    <string name="change_body_details">Change body details</string>
    <string name="you_are_diagnosed_with">You are diagnosed with:</string>
    <string-array name="filterMedics">
        <item>orl</item>
        <item>alergologie</item>
        <item>cardiologie</item>
        <item>chirurgie</item>
        <item>cosmetica</item>
        <item>dermatologie</item>
        <item>endocrinologie</item>
        <item>gastroenterologie</item>
        <item>kinetoterapie</item>
        <item>medicinaFamilie</item>
        <item>nefrologie</item>
        <item>neurologie</item>
        <item>obstreticaGinecologie</item>
        <item>oftalmologie</item>
        <item>pediatrie</item>
        <item>pneumologie</item>
        <item>urologie</item>
    </string-array>
    <string-array name="activityLevels">
        <item>Sedentary: little to no exercise</item>
        <item>Light: exercise 1–3 times/week</item>
        <item>Moderate: exercise 4–5 times/week</item>
        <item>Active: daily exercise</item>
    </string-array>
</resources>