<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyAnalysisActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/info_card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/body_analysis"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline17"
        app:layout_constraintVertical_bias="0.23000002"
        android:layout_marginBottom="-20dp">

<!--        MAIN ANALYSIS FRAGMENT-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/medics_background">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideEditBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/your_weight"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideEditBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/weight_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideEditBody"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/your_height"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideEditBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView9" />

            <EditText
                android:id="@+id/edtHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/height_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideEditBody"
                app:layout_constraintTop_toBottomOf="@id/edtWeight" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/your_gender"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideEditBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView10" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideEditBody"
                app:layout_constraintTop_toBottomOf="@+id/edtHeight">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/male_rb_text"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/female_rb_text"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/activity_level"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideEditBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView11" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideEditBody"
                app:layout_constraintTop_toBottomOf="@+id/rgGender"
                android:entries="@array/activityLevels"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/obtain_body_analysis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/disclaimer_your_body_analysis_is_calculated_based_on_a_fixed_forumla_and_it_doesn_t_necessarily_reflect_your_well_being"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.13999999" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

<!--    POP UP CARD-->
    <androidx.cardview.widget.CardView
        android:id="@+id/popUpCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/medics_background">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTopList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTotalComanda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.18" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottomList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.90" />

            <!--        Comanda-->
            <TextView
                android:id="@+id/txtComanda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/comanda"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtComandaNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/orderno_placeholder"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/txtComanda"
                app:layout_constraintTop_toTopOf="parent" />

            <!--        Data-->
            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/data_order"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineTotalComanda"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtComanda" />

            <TextView
                android:id="@+id/txtDateOrdered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/date_placeholder"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineTotalComanda"
                app:layout_constraintStart_toEndOf="@id/txtComanda"
                app:layout_constraintTop_toBottomOf="@id/txtComandaNo" />

            <!--        Data-->
            <TextView
                android:id="@+id/txtAmmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/total_comanda"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineTopList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guidelineTotalComanda" />

            <TextView
                android:id="@+id/txtAmmountOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/price_placeholder"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineTopList"
                app:layout_constraintStart_toEndOf="@id/txtComanda"
                app:layout_constraintTop_toBottomOf="@id/guidelineTotalComanda" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvInvestigationOrdered"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineBottomList"
                app:layout_constraintTop_toTopOf="@+id/guidelineTopList" />

            <Button
                android:id="@+id/btnGenerator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genereaza_factura"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineBottomList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>